Attempt to prevent vertical scrolling on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
-body {
-    height: 100vh;
+body,html {
     width: 100vw;
     background-color: black;
     margin: 0rem;
     overflow: hidden;
+    min-height: 100%;
+    overflow-y: hidden;
   }
   
   #image-track {
